@@ -1,3 +1,8 @@
+2014-02-07  Valentin Hilbig  <tino@subproject.org>
+
+	* unbuffered.c (unbuffered): fixed option '-b', it now can be
+	given twice
+
 2014-02-06  Valentin Hilbig  <tino@subproject.org>
 
 	* unbuffered.c (start_line, unbuffered): add `+` on incomplete
